--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,34 @@ ext {
 }
 
 dependencies {
+    //Spring data jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Spring validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // Spring boot starter
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Spring websocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    compileOnly 'org.projectlombok:lombok'
+
+    // Spring dev tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // Spring boot start test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Spring docs
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    // Maria DB
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.0'
+
 }
 
 test {
